<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eskatu eta Ordaindu</string>

    <string name="nav_menu3">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_category_new">Category name</string>
    <string name="dialog_options">Options</string>
    <string-array name="dialog_options_list">
        <item name="dialog_list_edit">Edit</item>
        <item name="dialog_list_delete">Delete</item>
    </string-array>
    <string name="dialog_item_name">Item name</string>
    <string name="dialog_item_description">Item description</string>
    <string name="dialog_item_prize">Item price</string>
    <string name="dialog_item_txt_prize">Set price</string>
    <string name="dialog_item_image">Upload image</string>
	
	 <string name="menu_client_icon_menu">Menu</string>
	 <string name="menu_client_icon_favourites">Favourites</string>
	 <string name="menu_client_icon_history">History</string>
	 <string name="menu_owner_orders">Orders</string>
	 <string name="menu_owner_icon_editor">Menu editor</string>
	 <string name="menu_owner_icon_stats">Statistics</string>
	 <string name="menu_drawer_settings">Settings</string>
	 <string name="menu_drawer_sign_out">Sign out</string>
	 <string name="menu_cart">Cart</string>
	 <string name="text_total_pay">Total to pay</string>
	 <string name="text_ed_num_table">Insert the number of the table</string>

    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_in_google">Sign in with Google</string>
    <string name="text_price">Price</string>
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_statistics_fragment">STATISTICS</string>
    <string name="text_top_dish">Top dish</string>
    <string name="text_stats_how_many">How many times ordered</string>
    <string name="text_change_name">Change user name</string>
    <string name="text_delete_account">DELETE ACCOUNT</string>
    <string name="text_category_name">Category name</string>
    <string name="text_item_name">Item Text</string>
    <string name="text_item_ingredients">Ingredients</string>
    <string name="text_item_prize">Price</string>

    <string name="dialog_ok">Accept</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="btn_cart_pay">Proceed to payment</string>

    <string name="tab_un_served">Un-served</string>
    <string name="tab_served">Served</string>
    <string name="text_category">Category</string>
    <string name="text_new_item">New item</string>

    <string name="dialog_un_served">Serve order</string>
    <string name="dialog_un_served_question">Has this order been served?</string>
</resources>