<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CartActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_cart_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/text_total_pay"/>

        <TextView
            android:id="@+id/txt_cart_total"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>


    <EditText
        android:id="@+id/et_num_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/text_ed_num_table"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btn_cart_order"
        android:text="@string/btn_cart_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>