<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txt_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="left"
        android:text="@string/text_item_name"
        android:textSize="8pt" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_item_details"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/text_item_ingredients" />

        <TextView
            android:id="@+id/txt_item_prize"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:text="@string/text_item_prize" />
    </LinearLayout>
</LinearLayout>